# riker

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  package.json  rustfmt.toml
.github/workflows/: audit.yml  build-and-test.yml  clippy.yml  format.yml  pre-commit.yml
config/: app.toml  riker.toml
examples/: basic.rs  basic_panic.rs  channel.rs  channel_dead_letters.rs  channel_system.rs  hierarchy.rs  messaging.rs  selection.rs  supervision_escalate.rs  supervision_restart.rs  supervision_stop.rs  system_message.rs
examples/ask_pattern/: Cargo.toml  README.md
examples/ask_pattern/src/: main.rs
riker/: Cargo.toml
riker-default/: Cargo.toml  README.md
riker-default/riker-deadletter/: Cargo.toml  README.md
riker-default/riker-deadletter/src/: lib.rs
riker-default/riker-dispatcher/: Cargo.toml  README.md
riker-default/riker-dispatcher/src/: lib.rs
riker-default/riker-log/: Cargo.toml  README.md
riker-default/riker-log/src/: lib.rs
riker-default/riker-mapvec/: Cargo.toml  README.md
riker-default/riker-mapvec/config/: riker.toml
riker-default/riker-mapvec/src/: lib.rs
riker-default/riker-mapvec/tests/: mapvec.rs
riker-default/riker-timer/: Cargo.toml  README.md
riker-default/riker-timer/config/: riker.toml
riker-default/riker-timer/src/: lib.rs
riker-default/riker-timer/tests/: timer.rs
riker-default/src/: lib.rs
riker-macros/: Cargo.toml  README.md
riker-macros/src/: lib.rs
riker-macros/tests/: macro.rs
riker-patterns/: Cargo.toml  README.md
riker-patterns/config/: riker.toml
riker-patterns/src/: ask.rs  lib.rs  transform.rs
riker-patterns/tests/: ask.rs  transform.rs
riker-testkit/: Cargo.toml  README.md
riker-testkit/src/: lib.rs  probe.rs
riker/config/: app.toml  riker.toml
riker/examples/: basic.rs  basic_panic.rs  channel.rs  channel_dead_letters.rs  messaging.rs  selection.rs  supervision_escalate.rs  supervision_restart.rs  supervision_stop.rs  system_message.rs
riker/src/: ask.rs  executor.rs  lib.rs  system.rs  validate.rs
riker/src/actor/: actor_cell.rs  actor_ref.rs  channel.rs  macros.rs  mod.rs  props.rs  selection.rs
riker/src/kernel/: kernel_ref.rs  mod.rs  provider.rs  queue.rs
riker/src/system/: logger.rs  mod.rs  timer.rs
riker/tests/: actors.rs  channels.rs  scheduling.rs  selection.rs  supervision.rs  system.rs
src/: actor.rs  config.rs  executor.rs  futures_util.rs  kernel.rs  lib.rs  model.rs  protocol.rs  system.rs  tokio_backend.rs  validate.rs
src/actor/: actor.rs  actor_cell.rs  actor_ref.rs  channel.rs  macros.rs  mod.rs  props.rs  selection.rs  uri.rs
src/kernel/: dispatcher.rs  kernel.rs  kernel_ref.rs  mailbox.rs  mod.rs  provider.rs  queue.rs
src/system/: io.rs  logger.rs  mod.rs  persist.rs  system.rs  timer.rs
tests/: actors.rs  channels.rs  logger.rs  scheduling.rs  selection.rs  supervision.rs  system.rs
tezedge-actor-system-macros/: Cargo.toml
tezedge-actor-system-macros/src/: lib.rs
tezedge-actor-system-macros/tests/: macro.rs
