[package]
name = "riker-default"
version = "0.1.7"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "Riker's default Model and modules providing core services"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"
keywords = ["event-sourcing", "scheduler", "async"]

[dependencies]
riker = { path = "../", version = "0.1.7" }
riker-deadletter = { path = "riker-deadletter", version = "0.1.7" }
riker-dispatcher = { path = "riker-dispatcher", version = "0.1.7" }
riker-log = { path = "riker-log", version = "0.1.7" }
riker-mapvec = { path = "riker-mapvec", version = "0.1.7" }
riker-timer = { path = "riker-timer", version = "0.1.7" }
