[package]
name = "riker-macros"
version = "0.2.0"
authors = ["Lee Smith <lee@riker.rs>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
syn = { version ="0.15.39", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "0.6.3"
proc-macro2 = "0.4.4"

[dev-dependencies]
riker = { path = ".." }

