[package]
name = "riker-macros"
version = "0.2.0"
authors = ["Lee Smith <lee@riker.rs>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
syn = { version ="1.0", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
riker = { path = ".." }
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
