[package]
name = "riker-macros"
version = "0.2.0"
authors = ["Lee Smith <lee@riker.rs>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[features]
default = []
tokio_executor = ["tokio", "riker-testkit/tokio_executor"]

[dependencies]
syn = { version ="1.0", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"], optional = true }

[dev-dependencies]
riker = { path = ".." }

[dev-dependencies.riker-testkit]
git = "https://github.com/mankinskin/riker-testkit"
branch = "tokio_executor"
