[package]
name = "riker-patterns"
version = "0.4.2"
authors = ["Lee Smith <leenozara@gmail.com>"]
edition = "2018"
description = "A collection of common actor patterns for Riker"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-patterns"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../riker" }
futures = "0.3.30"

[dev-dependencies]
riker-testkit = "0.1.0"
