[package]
name = "tezedge-actor-system-macros"
version = "0.5.0"
authors = ["Lee Smith <lee@riker.rs>"]
edition = "2018"
description = "Macro crate for Riker actor framework"
repository = "https://github.com/tezedge/tezedge-actor-system"
license = "MIT"
readme = "README.md"
keywords = ["actors", "actor-model", "async", "cqrs", "event_sourcing"]

[lib]
proc-macro = true

[dependencies]
syn = { version ="1.0", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tezedge-actor-system = { path = ".." }
tokio = { version = "1.12", features = ["sync", "rt-multi-thread", "macros", "time"] }
