[package]
name = "riker-deadletter"
version = "0.1.7"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "A Dead Letters logger for Riker"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../../", version = "0.1.7" }
log = { version = "0.4", features = ["std"] }
