[package]
name = "riker-deadletter"
version = "0.2.1"
authors = ["Lee Smith <leenozara@gmail.com>"]
edition = "2018"
description = "A Dead Letters logger for Riker"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../../", version = "0.2.1" }
log = { version = "0.4", features = ["std"] }
