[package]
name = "riker-dispatcher"
version = "0.2.1"
authors = ["Lee Smith <leenozara@gmail.com>"]
edition = "2018"
description = "A Dispatcher module for Riker powered by `Futures::execution::ThreadPool`"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../../", version = "0.2.1" }
config = "0.9"
futures-preview = "0.3.0-alpha.10"
futures-cpupool = "0.1.8"
