[package]
name = "riker-log"
version = "0.1.5"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "A Log module for Riker."
homepage = "https://riker.rs/logging"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../../", version = "0.1.6" }
chrono = "0.4"
config = "0.8"
runtime-fmt = "0.3.0"
