[package]
name = "riker-log"
version = "0.2.4"
authors = ["Lee Smith <leenozara@gmail.com>"]
edition = "2018"
description = "A Log module for Riker."
homepage = "https://riker.rs/logging"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"

[dependencies]
riker = { path = "../../", version = "0.2.4" }
chrono = "0.4"
config = "0.9"
runtime-fmt = "0.3.0"
