[package]
name = "riker-mapvec"
version = "0.1.7"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "Simple in-memory datastore for Riker persistent actors"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"


[dependencies]
riker = { path = "../../", version = "0.1.7" }
config = "0.8"

[dev-dependencies]
riker-default = { path = "../", version = "0.1.1" }
riker-testkit = "0.1.0"
