[package]
name = "riker-mapvec"
version = "0.2.3"
authors = ["Lee Smith <leenozara@gmail.com>"]
edition = "2018"
description = "Simple in-memory datastore for Riker persistent actors"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-default"
license = "MIT"
readme = "README.md"


[dependencies]
riker = { path = "../../", version = "0.2.3" }
config = "0.9"

[dev-dependencies]
riker-default = { path = "../", version = "0.2.2" }
riker-testkit = "0.1.0"
